      those exact result columns will be part of the result tuples.

    - a full select() construct can be passed to query.select() (which
      worked anyway), but also query.selectfirst(), query.selectone() which
      will be used as is (i.e. no query is compiled). works similarly to
      sending the results to instances().
      
    - added "refresh-expire" cascade [ticket:492].  allows refresh() and
      expire() calls to propigate along relationships.
    
    - more fixes to polymorphic relations, involving proper lazy-clause
      generation on many-to-one relationships to polymorphic mappers 
      [ticket:493]. also fixes to detection of "direction", more specific
      targeting of columns that belong to the polymorphic union vs. those
      that dont.

    - put an aggressive check for "flushing object A with a collection
      of B's, but you put a C in the collection" error condition - 
      **even if C is a subclass of B**, unless B's mapper loads polymorphically.
      Otherwise, the collection will later load a "B" which should be a "C"
      (since its not polymorphic) which breaks in bi-directional relationships
      (i.e. C has its A, but A's backref will lazyload it as a different 
      instance of type "B") [ticket:500]
      This check is going to bite some of you who do this without issues, 
      so the error message will also document a flag "enable_typechecks=False" 
      to disable this checking.  But be aware that bi-directional relationships
      in particular become fragile without this check.

- extensions:

    - options() method on SelectResults now implemented "generatively"
      like the rest of the SelectResults methods [ticket:472].  But
      you're going to just use Query now anyway.

    - query() method is added by assignmapper.  this helps with 
      navigating to all the new generative methods on Query.
    
0.3.5
- sql:
    - the value of "case_sensitive" defaults to True now, regardless of the